Save before removing comments